kubectl_manifests/adminer_manifests/adminer_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: ctfd-space
spec:
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
      - name: adminer
        image: adminer
        resources:
          limits:
            memory: "128Mi"
            cpu: "256m"
        ports:
        - containerPort: 8080
