kubectl_manifests/adminer_manifests/adminer_service.yml
apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: ctfd-space
spec:
  selector:
    app: adminer
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
